chore: fix #tabs alignment

--- a/packages/dnb-ui-lib/src/components/tabs/style/themes/dnb-tabs-theme-ui.scss
+++ b/packages/dnb-ui-lib/src/components/tabs/style/themes/dnb-tabs-theme-ui.scss
@@ -28,7 +28,7 @@
     &__tablist {
       // Only used on to visualize the tab ring nicer
       // This was a request by the ux team
-      margin: 0 -1rem;
+      margin-left: -1rem;
       padding: 0 1rem;
       &:focus {
         border-radius: 0.5rem;
